--- a/src/_includes/layouts/base.html
+++ b/src/_includes/layouts/base.html
@@ -14,7 +14,7 @@
     <link
       rel="icon"
       type="image/x-icon"
-      href="{{ '/assets/images/favicon.ico' | url }}"
+      href="{{ '/assets/images/favicon-32x32.png' | url }}"
     />
   </head>
   <body>
