--- a/src/scss/critical.scss
+++ b/src/scss/critical.scss
@@ -4,6 +4,11 @@
 
 :root {
   // COLORS
+  --white: hsl(0, 100%, 100%);
+  --grey-500: hsl(0, 0%, 63%);
+  --grey-800: hsl(0, 0%, 27%);
+  --black: hsl(0, 0%, 0%);
+
   --accent-color: hsl(240, 100%, 50%);
   --accent-color-light: hsl(240, 100%, 65%);
   --text-white: #fff;
@@ -17,8 +22,9 @@
 }
 
 body {
+  font-family: "League Spartan", sans-serif;
+  font-size: 1rem;
   line-height: 1.6em;
-  font-family: Arial, Helvetica, sans-serif;
 }
 
 .container {
