add more colors

--- a/src/scss/critical.scss
+++ b/src/scss/critical.scss
@@ -5,8 +5,11 @@
 :root {
   // COLORS
   --white: hsl(0, 100%, 100%);
-  --grey-500: hsl(0, 0%, 63%);
   --grey-800: hsl(0, 0%, 27%);
+  --grey-500: hsl(0, 0%, 63%);
+  --grey-200: hsl(0, 0%, 85%);
+  --grey-100: hsl(0%, 0%, 94%);
+  --grey-50: hsl(0%, 0%, 98%);
   --black: hsl(0, 0%, 0%);
 
   --accent-color: hsl(240, 100%, 50%);
