deploy: 31eea5176bd89e3582a06a111a4483e9a7e39510

--- a/scss/critical.css
+++ b/scss/critical.css
@@ -107,18 +107,112 @@ select {
     scroll-behavior: auto !important;
   }
 }
+.btn--text {
+  display: inline-block;
+  padding: 1em 2em;
+  text-decoration: none;
+  background-color: var(--accent-color);
+  color: var(--text-white);
+  font-size: 1rem;
+  font-weight: 700;
+  cursor: pointer;
+}
+.btn--text:hover {
+  background-color: var(--accent-color-light);
+}
+
+.navbar {
+  position: relative;
+  background-color: var(--black);
+  color: var(--white);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.navbar .logo {
+  display: block;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.navbar .main-nav {
+  visibility: hidden;
+  height: 0;
+  position: absolute;
+}
+
+.nav-toggle {
+  position: absolute;
+  left: 1rem;
+  top: 0;
+  bottom: 0;
+  background: transparent;
+  border: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
+}
+.nav-toggle .close {
+  visibility: hidden;
+  height: 0;
+  position: absolute;
+}
+
+@media (min-width: 48rem) {
+  .navbar {
+    justify-content: flex-start;
+    gap: var(--spacing-700);
+  }
+  .navbar .main-nav {
+    visibility: visible;
+    height: auto;
+    position: static;
+  }
+  .navbar .nav__list {
+    display: flex;
+    gap: var(--spacing-400);
+  }
+  .navbar .nav__item {
+    position: relative;
+    padding: 0.375rem 0;
+  }
+  .navbar .nav__item:hover::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: calc(50% - 0.5rem);
+    width: 1rem;
+    height: 2px;
+    border-bottom: 2px solid var(--white);
+  }
+  .navbar .nav__item a {
+    text-decoration: none;
+    color: var(--white);
+  }
+  .nav-toggle {
+    visibility: hidden;
+    height: 0;
+    position: absolute;
+  }
+}
 :root {
   --white: hsl(0, 100%, 100%);
-  --grey-500: hsl(0, 0%, 63%);
   --grey-800: hsl(0, 0%, 27%);
+  --grey-500: hsl(0, 0%, 63%);
+  --grey-200: hsl(0, 0%, 85%);
+  --grey-100: hsl(0%, 0%, 94%);
+  --grey-50: hsl(0%, 0%, 98%);
   --black: hsl(0, 0%, 0%);
-  --accent-color: hsl(240, 100%, 50%);
-  --accent-color-light: hsl(240, 100%, 65%);
-  --text-white: #fff;
-  --text-black: #000;
-  --bg-black: #1a1a1a;
   --container-max-width: 70rem;
   --container-width: 90%;
+  --spacing-0: 0;
+  --spacing-200: 1rem;
+  --spacing-300: 1.5rem;
+  --spacing-400: 2rem;
+  --spacing-600: 3rem;
+  --spacing-700: 3.5rem;
+  --spacing-800: 4rem;
 }
 
 body {
@@ -133,110 +227,10 @@ body {
   width: var(--container-width);
 }
 
-.btn--solid {
-  display: inline-block;
-  padding: 1em 2em;
-  text-decoration: none;
-  background-color: var(--accent-color);
-  color: var(--text-white);
-  font-size: 1rem;
-  font-weight: 700;
-  cursor: pointer;
-}
-.btn--solid:hover {
-  background-color: var(--accent-color-light);
-}
-
 header {
   position: relative;
-}
-header .nav-toggle {
-  position: absolute;
-  right: 0;
-  background: none;
-  border: none;
-}
-header .nav-toggle svg.close {
-  visibility: hidden;
-  height: 0;
-  position: absolute;
-}
-header:has(.main-nav.visible) svg.close {
-  visibility: visible;
-  height: auto;
-  position: relative;
-}
-header:has(.main-nav.visible) svg.hamburger {
-  visibility: hidden;
-  height: 0;
-  position: absolute;
-}
-header .navbar {
-  position: relative;
-  padding: clamp(1.5rem, 0.9718rem + 2.2535vw, 3rem) 0;
-}
-header .main-nav {
-  visibility: hidden;
-  height: 0;
-  position: absolute;
-  font-size: 1.125rem;
-}
-header .main-nav.visible {
-  background-color: var(--bg-black);
-  visibility: visible;
-  height: auto;
-  top: 100%;
-  right: 0;
-  left: 0;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 1.5rem;
-  padding: 2rem 1.5rem 1.5rem;
-  z-index: 1000;
-}
-header .main-nav.visible .nav__list {
-  display: flex;
-  flex-direction: column;
-  gap: 1.5rem;
-  text-align: center;
-}
-header .nav__item a {
-  text-decoration: none;
-  color: var(--text-white);
-}
-header .nav__item a:hover {
-  text-decoration: underline;
 }
 
 footer {
   text-align: center;
-}
-
-@media (min-width: 48rem) {
-  header .nav-toggle {
-    height: 0;
-    visibility: hidden;
-  }
-  header .navbar {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    font-size: 1rem;
-  }
-  header .main-nav {
-    visibility: visible;
-    height: auto;
-    position: relative;
-    display: flex;
-    align-items: center;
-    gap: clamp(1.875rem, -0.3393rem + 4.6131vw, 3.8125rem);
-  }
-  header .nav__list {
-    display: flex;
-    gap: clamp(1.25rem, 0.3929rem + 1.7857vw, 2rem);
-  }
-  header .nav__item a {
-    color: var(--text-black);
-  }
 }
