--- a/src/scss/_components.scss
+++ b/src/scss/_components.scss
@@ -19,9 +19,8 @@
 }
 
 .navbar {
-  // TODO: make bg color and color more dynamic?
   position: relative;
-  background-color: var(--black);
+  background-color: transparent;
   color: var(--white);
 
   display: flex;
@@ -45,6 +44,36 @@
   &:has(.main-nav.visible) {
     color: var(--black);
     background-color: var(--white);
+
+    & .nav-toggle .close {
+      @include mixins.visually-visible;
+    }
+
+    & .nav-toggle .hamburger {
+      @include mixins.visually-hidden;
+    }
+  }
+
+  .nav__list {
+    display: flex;
+    gap: var(--spacing-400);
+  }
+
+  .nav__item {
+    position: relative;
+    &:hover::after {
+      content: "";
+      position: absolute;
+      bottom: -0.375rem;
+      left: calc(50% - 0.5rem);
+      width: 1rem;
+      height: 2px;
+      border-bottom: 2px solid currentColor;
+    }
+    a {
+      text-decoration: none;
+      color: inherit;
+    }
   }
 }
 
@@ -65,35 +94,12 @@
   }
 }
 
-@media (min-width: 48rem) {
+@media (min-width: 64rem) {
   .navbar {
     justify-content: flex-start;
     gap: var(--spacing-700);
     .main-nav {
       @include mixins.visually-visible;
-    }
-
-    .nav__list {
-      display: flex;
-      gap: var(--spacing-400);
-    }
-
-    .nav__item {
-      position: relative;
-      padding: 0.375rem 0;
-      &:hover::after {
-        content: "";
-        position: absolute;
-        bottom: 0;
-        left: calc(50% - 0.5rem);
-        width: 1rem;
-        height: 2px;
-        border-bottom: 2px solid var(--white);
-      }
-      a {
-        text-decoration: none;
-        color: inherit;
-      }
     }
   }
 
