refactor header and footer

--- a/src/_includes/layouts/base.html
+++ b/src/_includes/layouts/base.html
@@ -18,9 +18,11 @@
     />
   </head>
   <body>
-    {% include "partials/site-header.html" %}
-    <main>{% block content %}{% endblock %}</main>
-    {% include "partials/site-footer.html" %}
+    <main>
+      {% include "partials/navbar.html" %}
+      {% block content %}
+      {% endblock %}
+    </main>
     <script src="{{ '/main.js' | url }}"></script>
   </body>
 </html>
