--- a/src/_includes/layouts/home.html
+++ b/src/_includes/layouts/home.html
@@ -1,3 +1,45 @@
 {% extends "layouts/base.html" %}
 {% block content %}
+  <section class="hero">
+    <div class="hero__container">
+      <div class="hero__image">
+        <picture>
+          <!-- Desktop (1240px and up) -->
+          <source
+            media="(min-width: 1240px)"
+            srcset="./assets/images/desktop-image-hero-1.jpg"
+          />
+
+          <!-- Mobile (up to 767px) -->
+          <source
+            media="(max-width: 767px)"
+            srcset="./assets/images/mobile-image-hero-1.jpg"
+          />
+
+          <!-- Fallback image -->
+          <img
+            src="./assets/images/mobile-image-hero-1.jpg"
+            alt="white chairs by a table with a bonsai tree on it"
+          />
+        </picture>
+      </div>
+
+      <div class="hero__content">
+        <h1>Discover innovative ways to decorate</h1>
+        <p>
+          We provide unmatched quality, comfort, and style for property owners
+          across the country. Our experts combine form and function in bringing
+          your vision to life. Create a room in your own style with our
+          collection and make your property a reflection of you and what you
+          love.
+        </p>
+        <a
+          href="#"
+          class="btn--text"
+        >
+          Shop Now
+        </a>
+      </div>
+    </div>
+  </section>
 {% endblock %}
