--- a/src/scss/_components.scss
+++ b/src/scss/_components.scss
@@ -19,10 +19,13 @@
 }
 
 .navbar {
-  position: relative;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 6.875rem;
   background-color: transparent;
   color: var(--white);
-
+  padding: var(--spacing-600) 0;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -79,7 +82,7 @@
 
 .nav-toggle {
   position: absolute;
-  left: 1rem;
+  left: clamp(var(--spacing-300), -0.8855rem + 10.1781vw, var(--spacing-800));
   top: 0;
   bottom: 0;
   background: transparent;
