--- a/src/scss/critical.scss
+++ b/src/scss/critical.scss
@@ -28,9 +28,9 @@ body {
   font-family: "League Spartan", sans-serif;
   font-size: 1rem;
   line-height: 1.6em;
-  background-color: var(--black);
+  background-color: var(--white);
 }
 
-header {
+main {
   position: relative;
 }
