deploy: b2eb9d5538ba30f9f658daed4cbd779b87e65a19

--- a/scss/critical.css
+++ b/scss/critical.css
@@ -122,9 +122,13 @@ select {
 }
 
 .navbar {
-  position: relative;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 6.875rem;
   background-color: transparent;
   color: var(--white);
+  padding: var(--spacing-600) 0;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -182,7 +186,7 @@ select {
 
 .nav-toggle {
   position: absolute;
-  left: 1rem;
+  left: clamp(var(--spacing-300), -0.8855rem + 10.1781vw, var(--spacing-800));
   top: 0;
   bottom: 0;
   background: transparent;
@@ -235,9 +239,9 @@ body {
   font-family: "League Spartan", sans-serif;
   font-size: 1rem;
   line-height: 1.6em;
-  background-color: var(--black);
+  background-color: var(--white);
 }
 
-header {
+main {
   position: relative;
 }
