--- a/src/_includes/layouts/home.html
+++ b/src/_includes/layouts/home.html
@@ -25,20 +25,15 @@
       </div>
 
       <div class="hero__content">
-        <h1>Discover innovative ways to decorate</h1>
-        <p>
+        <h1 class="hero__title">Discover innovative ways to decorate</h1>
+        <p class="hero__copy">
           We provide unmatched quality, comfort, and style for property owners
           across the country. Our experts combine form and function in bringing
           your vision to life. Create a room in your own style with our
           collection and make your property a reflection of you and what you
           love.
         </p>
-        <a
-          href="#"
-          class="btn--text"
-        >
-          Shop Now
-        </a>
+        {% include "partials/button-text.html" %}
       </div>
     </div>
   </section>
