--- a/src/_includes/partials/button-text.html
+++ b/src/_includes/partials/button-text.html
@@ -2,6 +2,5 @@
   href="#"
   class="btn--text"
 >
-  <p>Shop Now</p>
-  {% include "svgs/icon-arrow.svg" %}
+  Shop Now {% include "svgs/icon-arrow.svg" %}
 </a>
