--- a/src/scss/_components.scss
+++ b/src/scss/_components.scss
@@ -73,8 +73,9 @@
   }
 
   .nav__item {
+    @include mixins.text-preset-3-semibold;
     position: relative;
-    &:hover::after {
+    &::after {
       content: "";
       position: absolute;
       bottom: -0.375rem;
@@ -82,6 +83,12 @@
       width: 1rem;
       height: 2px;
       border-bottom: 2px solid currentColor;
+      transform: scale(0);
+      transition: transform 0.3s ease;
+    }
+
+    &:hover::after {
+      transform: scale(1);
     }
     a {
       text-decoration: none;
