add carousel button

--- a/src/_includes/layouts/base.html
+++ b/src/_includes/layouts/base.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <main>
-      {% include "partials/navbar.html" %}
+      {% include "components/navbar.html" %}
       {% block content %}
       {% endblock %}
     </main>
