--- a/src/_includes/layouts/home.html
+++ b/src/_includes/layouts/home.html
@@ -22,6 +22,7 @@
             alt="white chairs by a table with a bonsai tree on it"
           />
         </picture>
+        {% include "components/button-carousel.html" %}
       </div>
 
       <div class="hero__content">
@@ -33,7 +34,7 @@
           collection and make your property a reflection of you and what you
           love.
         </p>
-        {% include "partials/button-text.html" %}
+        {% include "components/button-text.html" %}
       </div>
     </div>
   </section>
