--- a/src/scss/_components.scss
+++ b/src/scss/_components.scss
@@ -31,8 +31,8 @@
   align-items: center;
   justify-content: center;
   border: none;
-  width: 5rem;
-  height: 5rem;
+  width: clamp(3.5rem, 2.0687rem + 6.1069vw, 5rem);
+  height: clamp(3.5rem, 2.0687rem + 6.1069vw, 5rem);
   appearance: none;
 }
 
