--- a/scss/critical.css
+++ b/scss/critical.css
@@ -331,6 +331,11 @@ main {
 .hero .btn--text {
   width: 100%;
 }
+.hero [data-slideId].hidden {
+  visibility: hidden;
+  height: 0;
+  position: absolute;
+}
 
 @media (min-width: 48rem) {
   .hero .btn--text {
