style about and add readme

--- a/src/_includes/layouts/home.html
+++ b/src/_includes/layouts/home.html
@@ -68,4 +68,32 @@
       </div>
     </div>
   </section>
+
+  <section class="about">
+    <div class="about__container">
+      <div class="about__image">
+        <img
+          src="./assets/images/image-about-dark.jpg"
+          alt="dark room with chairs"
+        />
+      </div>
+      <div class="about__content">
+        <h2 class="about__title">About our furniture</h2>
+        <p class="about__copy">
+          Our multifunctional collection blends design and function to suit your
+          individual taste. Make each room unique, or pick a cohesive theme that
+          best express your interests and what inspires you. Find the furniture
+          pieces you need, from traditional to contemporary styles or anything
+          in between. Product specialists are available to help you create your
+          dream space
+        </p>
+      </div>
+      <div class="about__image">
+        <img
+          src="./assets/images/image-about-light.jpg"
+          alt="light room with chair"
+        />
+      </div>
+    </div>
+  </section>
 {% endblock %}
